# triskell-core

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
tests/: test_chasseur_site_match.py  test_client_service_mode.py  test_email_filter.py  test_naf_labels.py  test_name_case.py  test_pipeline_shared_crm.py
triskell_core/: __init__.py
triskell_core/ai/: __init__.py  builder.py  library.py  providers.py
triskell_core/data/: __init__.py  mega_prompts.json
triskell_core/db/: __init__.py  client.py  remote_crm.py  repos.py
triskell_core/licensing/: __init__.py  public_key.pem
triskell_core/prospect/: BACKLOG.md  PROJECT_STATE.md  README.md  __init__.py  cli.py  creators_pipeline.py  install_scheduled_task.ps1  naf_labels.py  nightly.py  pipeline.py  quality_reviewer.py  record_repair.py  requirements.txt  search_cursor.py
triskell_core/prospect/core/: crm.py  name_case.py  prospect.py  relevance.py
triskell_core/prospect/enrichers/: email_filter.py  footprint.py  linktree.py  monetization.py  web.py
triskell_core/prospect/outreach/: imap_listener.py  smtp_sender.py  templates.py
triskell_core/prospect/sources/: _http.py  bluesky.py  creators.py  dailymotion.py  denicheur.py  file_import.py  github.py  kick.py  maps.py  mastodon.py  obelisk.py  openstreetmap.py  podcasts.py  pubmed.py  pypi.py  reddit.py  sirene.py  twitch.py  youtube.py
triskell_core/social/: __init__.py
