[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "triskell-core"
version = "0.1.0"
description = "Bibliothèque partagée Triskell Studio (prospection, IA, social, CRM)"
authors = [{ name = "Jordan — Triskell Studio" }]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "dnspython>=2.4",  # email_filter.has_mail_record : vérif MX (anti-rebond)
]

[tool.setuptools.packages.find]
include = ["triskell_core*"]

[tool.setuptools.package-data]
"triskell_core.data" = ["*.json"]
